k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: novossh
  labels:
    app.kubernetes.io/name: novossh
    app.kubernetes.io/part-of: novossh
    environment: production
