k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novossh
  namespace: novossh
  labels:
    app.kubernetes.io/name: novossh
    app.kubernetes.io/component: server
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8787"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: novossh
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: websocket
      port: 8787
      targetPort: http
      protocol: TCP
